Fix sheet scroller when OS scroll bars are visible

--- a/src/scss/_sheet.scss
+++ b/src/scss/_sheet.scss
@@ -5,7 +5,7 @@
 
 .sheet__scroller {
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   position: absolute;
   top: 0;
   left: 0;
